--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,16 @@
     "name": "socialiteproviders/weixin",
     "description": "Weixin OAuth2 Provider for Laravel Socialite",
     "license": "MIT",
-    "authors": [{
-        "name": "xyxu",
-        "email": "techxu@gmail.com"
-    }],
+    "authors": [
+        {
+            "name": "xyxu",
+            "email": "techxu@gmail.com"
+        },
+        {
+            "name": "xiami",
+            "email": "jhdxr@php.net"
+        }
+    ],
     "require": {
         "php": "^5.6 || ^7.0",
         "socialiteproviders/manager": "~2.1"
